--- a/Client/Dt.Base/Report/Design/RptDesignHome.xaml
+++ b/Client/Dt.Base/Report/Design/RptDesignHome.xaml
@@ -5,15 +5,18 @@
     xmlns:a="using:Dt.Base"
     Home="功能列表">
 
-    <a:WinItem DockState="DockedLeft">
+    <a:WinItem DockState="DockedLeft" InitWidth="300">
         <a:Tabs>
             <a:Tab Title="功能列表">
                 <StackPanel>
-                    <a:BtnItem Icon="修改" Title="模板编辑" Click="OnEditTemplate" />
-                    <a:BtnItem Icon="备注" Title="删除聊天记录" Desc="删除所有历史聊天记录，包括文字、文件、图片、音视频等。" />
-                    <a:BtnItem Icon="排列" Title="清除自定义布局" Desc="将所有视图布局恢复到默认状态。" />
-                    <a:BtnItem Icon="文件" Title="删除临时文件" Desc="删除所有临时文件，删除后再次用到时需要重新下载，建议存储空间充足时不必清除。" />
-                    <a:BtnItem Icon="禁止登记" Title="注销" Desc="设置自动登录时，可以通过注销切换账号。"/>
+                    <a:BtnItem Icon="修改" Title="模板编辑" Desc="编辑报表模板" Click="OnEditTemplate" />
+                    <a:BtnItem Icon="信件" Title="参数定义" Desc="报表输入参数可以为内部宏参数或外部输入参数" />
+                    <a:BtnItem Icon="数据库" Title="Db数据源" Desc="定义查询数据集的SQL语句" />
+                    <a:BtnItem Icon="U盘" Title="自定义数据源" Desc="程序中动态提供的数据集" />
+                    <a:BtnItem Icon="文件" Title="页面设置" Desc="浏览当前报表模板的Xml内容"/>
+                    <a:BtnItem Icon="导出" Title="导出" Desc="浏览当前报表模板的Xml内容" Click="OnExport" />
+                    <a:BtnItem Icon="导入" Title="导入" Desc="从外部导入报表模板"/>
+                    <a:BtnItem Icon="门卫" Title="报表预览" Desc="浏览运行时报表"/>
                 </StackPanel>
             </a:Tab>
         </a:Tabs>
