--- a/Client/Dt.Base/Report/Design/Forms/MatrixForm.xaml
+++ b/Client/Dt.Base/Report/Design/Forms/MatrixForm.xaml
@@ -5,7 +5,14 @@
     xmlns:a="using:Dt.Base">
 
     <a:Fv x:Name="_fv">
-        <a:CBar Title="基本格" />
-        <a:CText ID="txt" Title="文本框" />
+        <a:CBar Title="矩阵" />
+        <a:CList ID="tbl" Title="数据源" />
+        <a:CBool ID="hiderowheader" Title="隐藏行头" />
+        <a:CBool ID="repeatrowheader" Title="在每页重复行头" />
+        <a:CBool ID="hidecolheader" Title="隐藏列头" />
+        <a:CBool ID="repeatcolheader" Title="在每页重复列头" />
+        <a:CText ID="rowsort" Title="行排序表达式" />
+        <a:CText ID="colsort" Title="列排序表达式" />
+        <Button Content="删除矩阵" Click="OnDelMtx" />
     </a:Fv>
 </UserControl>
