--- a/Client/Dt.Base/Report/Design/Forms/MatrixLevelForm.xaml
+++ b/Client/Dt.Base/Report/Design/Forms/MatrixLevelForm.xaml
@@ -2,10 +2,20 @@
     x:Class="Dt.Base.Report.MatrixLevelForm"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base">
+    xmlns:a="using:Dt.Base"
+    xmlns:rpt="using:Dt.Base.Report">
 
-    <a:Fv x:Name="_fv">
-        <a:CBar Title="基本格" />
-        <a:CText ID="txt" Title="文本框" />
-    </a:Fv>
+    <ScrollViewer>
+        <StackPanel>
+            <rpt:MatrixForm x:Name="_fvMtx" />
+            <a:Fv x:Name="_fv">
+                <a:CBar Title="矩阵层次" />
+                <a:CList ID="field" Title="关联字段" />
+                <Button Content="新建子层次" Click="OnAddLevel" />
+                <Button Content="新建小计" Click="OnAddTotal" />
+                <Button Content="新建静态标题" Click="OnAddTitle" />
+                <Button Content="删除层次" Click="OnDelLevel" />
+            </a:Fv>
+        </StackPanel>
+    </ScrollViewer>
 </UserControl>
