--- a/Client/Dt.Base/Report/Design/RptDesignHome.xaml
+++ b/Client/Dt.Base/Report/Design/RptDesignHome.xaml
@@ -12,11 +12,11 @@
                     <a:BtnItem Icon="修改" Title="模板编辑" Desc="编辑报表模板" Click="OnEditTemplate" />
                     <a:BtnItem Icon="信件" Title="参数定义" Desc="报表输入参数可以为内部宏参数或外部输入参数" />
                     <a:BtnItem Icon="数据库" Title="Db数据源" Desc="定义查询数据集的SQL语句" />
-                    <a:BtnItem Icon="U盘" Title="自定义数据源" Desc="程序中动态提供的数据集" />
+                    <a:BtnItem Icon="U盘" Title="脚本数据源" Desc="程序中动态提供的数据集" />
                     <a:BtnItem Icon="文件" Title="页面设置" Desc="浏览当前报表模板的Xml内容"/>
                     <a:BtnItem Icon="导出" Title="导出" Desc="浏览当前报表模板的Xml内容" Click="OnExport" />
-                    <a:BtnItem Icon="导入" Title="导入" Desc="从外部导入报表模板"/>
-                    <a:BtnItem Icon="门卫" Title="报表预览" Desc="浏览运行时报表"/>
+                    <a:BtnItem Icon="导入" Title="导入" Desc="从外部导入报表模板" Click="OnImport" />
+                    <a:BtnItem Icon="门卫" Title="报表预览" Desc="浏览运行时报表" Click="OnPreview"/>
                 </StackPanel>
             </a:Tab>
         </a:Tabs>
