Excel的CellClick事件未触发，滚动时修饰层未同步，增加报表右键菜单

--- a/Client/Dt.Base/Report/Design/RptDesignWin.xaml
+++ b/Client/Dt.Base/Report/Design/RptDesignWin.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Home="编辑,属性">
+    Home="编辑,报表项,单元格">
 
     <a:WinCenter>
         <a:Tabs>
