--- a/Client/Dt.Base/Report/Preview/RptView.xaml
+++ b/Client/Dt.Base/Report/Preview/RptView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Dt.Base.Report.RptView"
+    x:Class="Dt.Base.RptView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
