--- a/Client/Dt.Base/Report/Preview/RptSearchForm.xaml
+++ b/Client/Dt.Base/Report/Preview/RptSearchForm.xaml
@@ -4,5 +4,5 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
-    <TextBlock Text="查询面板" />
+    <a:Fv x:Name="_fv" />
 </UserControl>
