--- a/Client/Dt.Base/Report/Design/ParamsWin.xaml
+++ b/Client/Dt.Base/Report/Design/ParamsWin.xaml
@@ -2,7 +2,8 @@
     x:Class="Dt.Base.Report.ParamsWin"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base">
+    xmlns:a="using:Dt.Base"
+    Home="参数列表,预览">
 
     <a:WinItem DockState="DockedLeft">
         <a:Tabs>
@@ -27,7 +28,6 @@
                 </a:Tab.Menu>
                 <a:Fv x:Name="_fv">
                     <a:CText ID="id" Title="参数标识" />
-                    <a:CText ID="title" Title="参数标题" />
                     <a:CList ID="type" Title="参数类型">
                         <a:CList.Items>
                             <x:String>string</x:String>
@@ -40,17 +40,9 @@
                     </a:CList>
                     <a:CList ID="val" Title="缺省值" IsEditable="True" />
                     <a:CBool ID="ismacro" Title="宏" />
-                    <a:CBool ID="hide" Title="不在查询面板显示" />
-                    <a:CText ID="note" Title="备注" />
+                    <a:CText ID="note" Title="备注" IsHorStretch="True" />
                     <a:CBar Title="显示相关" />
-                    <a:CBool ID="showtitle" Title="显示标题" />
-                    <a:CNum ID="titlewidth" Title="列标题宽度" IsInteger="True" Minimum="0" />
-                    <a:CBool ID="showstar" Title="显示红星" />
-                    <a:CBool ID="isverticaltitle" Title="垂直显示标题" />
-                    <a:CBool ID="ishorstretch" Title="水平填充" />
-                    <a:CNum ID="rowspan" Title="占用行数" IsInteger="True" Minimum="1" />
-                    <a:CText ID="placeholder" Title="水印文本" />
-                    <a:CBool ID="isreadonly" Title="只读" />
+                    <a:CText ID="xaml" ShowTitle="False" AcceptsReturn="True" IsHorStretch="True" RowSpan="18" />
                 </a:Fv>
             </a:Tab>
         </a:Tabs>
