--- a/Client/Dt.Sample/Styles/TestDemo2.xaml
+++ b/Client/Dt.Sample/Styles/TestDemo2.xaml
@@ -4,12 +4,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
-    <Grid>
+    <Grid x:Name="_grid">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Button Content="Test" Click="OnTest" />
-        <a:Excel x:Name="_excel" Grid.Row="1" />
+        
     </Grid>
 </a:Win>
