--- a/Client/Dt.Base/Report/Design/DataSource/DbDataWin.xaml
+++ b/Client/Dt.Base/Report/Design/DataSource/DbDataWin.xaml
@@ -4,12 +4,15 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
-    <a:WinItem DockState="DockedLeft">
+    <a:WinItem DockState="DockedLeft" InitWidth="240">
         <a:Tabs>
-            <a:Tab Title="数据集">
+            <a:Tab Title="数据源">
                 <a:Lv x:Name="_lv" ItemClick="OnItemClick">
                     <DataTemplate>
-                        <a:Dot ID="id" Padding="10" />
+                        <StackPanel Padding="10">
+                            <a:Dot ID="id" />
+                            <a:Dot ID="cols" Foreground="{StaticResource 深灰边框}" FontSize="12" />
+                        </StackPanel>
                     </DataTemplate>
                 </a:Lv>
             </a:Tab>
@@ -21,20 +24,41 @@
                 <a:Tab.Menu>
                     <a:Menu>
                         <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
-                        <a:Mi ID="执行Sql" Icon="设置" />
                         <a:Mi ID="撤消" Icon="撤销" Cmd="{Binding CmdUndo,ElementName=_fv}" />
                         <a:Mi ID="删除" Icon="删除" Click="OnDel" />
                     </a:Menu>
                 </a:Tab.Menu>
                 <a:Fv x:Name="_fv">
-                    <a:CText ID="id" Title="数据集名称" />
+                    <a:CText ID="id" Title="数据名称" />
                     <a:CText ID="srv" Title="服务名称" />
-                    <a:CBar Title="列名，逗号隔开" />
-                    <a:CText ID="cols" ShowTitle="False" AcceptsReturn="True" IsHorStretch="True" RowSpan="2" />
                     <a:CBar Title="Sql查询" />
                     <a:CText ID="sql" ShowTitle="False" AcceptsReturn="True" IsHorStretch="True" RowSpan="17" />
+                    <a:CBar Title="列名，逗号隔开" />
+                    <a:CText ID="cols" ShowTitle="False" AcceptsReturn="True" IsHorStretch="True" RowSpan="2" />
                 </a:Fv>
             </a:Tab>
         </a:Tabs>
     </a:WinCenter>
+    <a:WinItem DockState="DockedRight">
+        <a:Tabs>
+            <a:Tab x:Name="_tab" Title="查询测试">
+                <a:Tab.Menu>
+                    <a:Menu>
+                        <a:Mi ID="执行Sql" Icon="设置" Click="OnQuerySql" />
+                        <a:Mi ID="刷新参数" Icon="刷新" Click="OnCreateSearchFv" />
+                    </a:Menu>
+                </a:Tab.Menu>
+            </a:Tab>
+        </a:Tabs>
+        <a:Tabs>
+            <a:Tab Title="查询结果">
+                <a:Tab.Menu>
+                    <a:Menu>
+                        <a:Mi ID="更新列名" Icon="刷新" Click="OnUpdateCols" />
+                    </a:Menu>
+                </a:Tab.Menu>
+                <a:Lv x:Name="_lvCols" AutoCreateCol="True" />
+            </a:Tab>
+        </a:Tabs>
+    </a:WinItem>
 </a:Win>
