--- a/Client/Dt.Sample/ListView/LvViewBase.xaml
+++ b/Client/Dt.Sample/ListView/LvViewBase.xaml
@@ -143,8 +143,9 @@
                     
                     <a:CBar Title="附加事件" />
                     <StackPanel Orientation="Horizontal">
-                        <CheckBox Content="行单击事件" Click="OnRowClick" />
+                        <CheckBox Content="行单击事件" Click="OnRowClick" Margin="10,0,0,0" />
                         <CheckBox Content="选择变化事件" Click="OnSelectionChangedClick" />
+                        <CheckBox Content="行双击事件" Click="OnRowDoubleClick" />
                     </StackPanel>
                     
                     <a:CBar Title="行操作" />
