--- a/Client/Dt.Base/Report/Design/Edit/Forms/MatrixSubtitleForm.xaml
+++ b/Client/Dt.Base/Report/Design/Edit/Forms/MatrixSubtitleForm.xaml
@@ -2,10 +2,18 @@
     x:Class="Dt.Base.Report.MatrixSubtitleForm"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base">
+    xmlns:a="using:Dt.Base"
+    xmlns:rpt="using:Dt.Base.Report">
 
-    <a:Fv x:Name="_fv">
-        <a:CBar Title="基本格" />
-        <a:CText ID="txt" Title="文本框" />
-    </a:Fv>
+    <ScrollViewer>
+        <StackPanel>
+            <rpt:MatrixForm x:Name="_fvMtx" />
+            <a:Fv x:Name="_fv">
+                <a:CBar Title="静态标题" />
+                <a:CNum ID="span" Title="标题跨度" Minimum="1" IsInteger="True" />
+                <Button Content="新建子标题" Click="OnAddTitle" />
+                <Button Content="删除标题" Click="OnDelTitle" />
+            </a:Fv>
+        </StackPanel>
+    </ScrollViewer>
 </UserControl>
