--- a/Client/Dt.Base/Report/Design/ParamsWin.xaml
+++ b/Client/Dt.Base/Report/Design/ParamsWin.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Home="参数列表,预览">
+    Home="参数列表,编辑,预览">
 
     <a:WinItem DockState="DockedLeft">
         <a:Tabs>
