--- a/Client/Dt.App/Home/DefaultHome.xaml
+++ b/Client/Dt.App/Home/DefaultHome.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Win
-    x:Class="Dt.App.Home.DefaultHome"
+    x:Class="Dt.App.DefaultHome"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
