--- a/Client/Dt.App/Model/Menu/SysMenu.xaml
+++ b/Client/Dt.App/Model/Menu/SysMenu.xaml
@@ -45,7 +45,14 @@
                     <a:CText ID="name" Title="名称" />
                     <a:CIcon ID="icon" Title="图标" />
                     <a:CTree ID="parentname" Title="所属菜单" RefreshData="true" SrcID="id" TgtID="parentid" LoadData="OnLoadTreeGroup" />
-                    <a:CText ID="viewname" Title="视图名称" />
+                    <a:CList ID="viewname" Title="视图名称" IsEditable="True">
+                        <DataTemplate>
+                            <StackPanel Padding="10">
+                                <a:Dot ID="name" />
+                                <a:Dot ID="desc" Foreground="{StaticResource 深灰边框}" FontSize="12" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </a:CList>
                     <a:CText ID="params" Title="视图参数" AcceptsReturn="True" RowSpan="3" />
                     <a:CText ID="srvname" Title="提示服务" />
                     <a:CText ID="note" Title="功能说明" AcceptsReturn="True" RowSpan="3" />
