--- a/Client/Dt.App/File/MoveFileDlg.xaml
+++ b/Client/Dt.App/File/MoveFileDlg.xaml
@@ -2,17 +2,6 @@
     x:Class="Dt.App.File.MoveFileDlg"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base"
-    Title="移到">
+    xmlns:a="using:Dt.Base">
 
-    <a:Dlg.Menu>
-        <a:Menu>
-            <a:Mi ID="保存" Icon="保存" ShowInPhone="Icon" IsEnabled="{Binding IsDirty,ElementName=_fv}" Click="OnSave" />
-            <a:Mi ID="增加" Icon="加号" ShowInPhone="Icon" Click="OnAdd" />
-        </a:Menu>
-    </a:Dlg.Menu>
-
-    <a:Fv x:Name="_fv">
-        <a:CText ID="name" Title="文件夹名称" />
-    </a:Fv>
 </a:Dlg>
