文件管理的最近使用功能

--- a/Client/Dt.App/File/FolderPage.xaml
+++ b/Client/Dt.App/File/FolderPage.xaml
@@ -20,7 +20,7 @@
         </DataTemplate>
 
         <DataTemplate x:Key="FileTemplate">
-            <a:FileList Data="{Binding [Info]}" BorderBrush="Transparent" />
+            <a:FileList Data="{Binding [Info]}" OpenedFile="OnOpenedFile" BorderBrush="Transparent" />
         </DataTemplate>
     </UserControl.Resources>
 
