--- a/Client/Dt.App/File/FileHome.xaml
+++ b/Client/Dt.App/File/FileHome.xaml
@@ -14,7 +14,20 @@
     <a:WinCenter>
         <a:Tabs>
             <a:Tab Title="最近使用">
-                
+                <a:Tab.Menu>
+                    <a:Menu>
+                        <a:Mi ID="清空" Icon="垃圾箱" Click="OnClearHis" />
+                    </a:Menu>
+                </a:Tab.Menu>
+                <a:FileList x:Name="_fl" ColCount="2">
+                    <a:Ex.Menu>
+                        <a:Menu>
+                            <a:Mi ID="分享" Icon="分享" Cmd="{Binding CmdShare}" />
+                            <a:Mi ID="保存" Icon="保存" Cmd="{Binding CmdSaveAs}" />
+                            <a:Mi ID="删除" Icon="删除" Click="OnDeleteHis" />
+                        </a:Menu>
+                    </a:Ex.Menu>
+                </a:FileList>
             </a:Tab>
         </a:Tabs>
     </a:WinCenter>
